# nexus

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.de.md  README.md  demo_cheat.py  docker-compose.yml  pyproject.toml  red_team.py  red_team_isolated.py  requirements.txt  run.py
.github/workflows/: ci.yml
agents/: consumer.py  federation_test.py  ollama_agent.py  provider.py  register_existing.py  universal_adapter.py
docs/: ARCHITECTURE.md  PROTOCOL.md  consistency-matrix.md  invariants.md  reddit_post.md  reddit_post_de.md
nexus/: __init__.py  auth.py  config.py  database.py  main.py  sdk.py  sdk_standalone.py
nexus/api/: a2a.py  analytics.py  defense.py  federation.py  payments.py  policy.py  protocol.py  registry.py  router.py  schemas.py  trust.py  websocket.py
nexus/dashboard/static/: index.html
nexus/defense/: service.py
nexus/federation/: service.py
nexus/models/: __init__.py  agent.py  capability_schema.py  protocol.py  trust.py  verification.py
nexus/payments/: service.py
nexus/policy/: service.py
nexus/protocol/: handler.py  reconciliation.py  state_machine.py
nexus/registry/: reaper.py  service.py
nexus/router/: circuit_breaker.py  service.py
nexus/trust/: service.py
nexus/verification/: service.py  verifiers.py
tests/: conftest.py  test_a2a.py  test_agent_auth.py  test_analytics.py  test_auth.py  test_chaos.py  test_circuit_breaker.py  test_crash_injection.py  test_cross_object_consistency.py  test_defense.py  test_federation.py  test_invariants.py  test_lifecycle.py  test_models.py  test_payments.py  test_policy.py  test_protocol.py  test_reconciliation.py  test_red_team.py  test_registry.py  test_router.py  test_schemas.py  test_state_machine.py  test_trust.py  test_verification.py  test_verifiers.py
